tests/macros/checkbox/mask.stderr
error: option `mask` does not exist for kind `checkbox`
 --> $DIR/mask.rs:2:48
  |
2 |     let q = inquisition::questions![checkbox { mask: todo!() }];
  |                                                ^^^^
