tests/macros/checkbox/mask.rs
fn main() {
    let q = inquisition::questions![checkbox { mask: todo!() }];
}
